--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="ext/build/junit-4.8.1.jar"/>
-	<classpathentry kind="lib" path="ext/avalon-framework-4.2.0.jar"/>
-	<classpathentry kind="lib" path="ext/batik-all-1.7.jar"/>
-	<classpathentry kind="lib" path="ext/commons-io-1.3.1.jar"/>
-	<classpathentry kind="lib" path="ext/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="ext/fop-1.1.jar"/>
-	<classpathentry kind="lib" path="ext/jchart2d-3.3.0.jar"/>
-	<classpathentry kind="lib" path="ext/xmlgraphics-commons-1.5.jar"/>
+	<classpathentry exported="true" kind="con" path="org.springsource.ide.eclipse.gradle.classpathcontainer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
