Project setup: version number generation and publishing to github maven repo

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jchart2d-jchart2d-uimenu-code</name>
+	<name>jchart2d-uimenu</name>
 	<comment></comment>
 	<projects>
 	</projects>
